--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,18 @@
 certifi==2021.10.8
 charset-normalizer==2.0.12
+colorama==0.4.4
+decorator==4.4.2
 idna==3.3
+imageio==2.16.2
+imageio-ffmpeg==0.4.7
+moviepy==1.0.3
+numpy==1.22.3
+Pillow==9.1.0
+proglog==0.1.9
 python-dotenv==0.20.0
+pytube==12.0.0
 pytube3==9.6.4
 requests==2.27.1
+tqdm==4.64.0
 typing_extensions==4.1.1
 urllib3==1.26.9
